src/test/deca/context/invalid/provided/testi14.deca
//Resultats :
//Erreur contextuelle
//Ligne 14 : Right value doesn't match the expected type
class X{
    void methody(float y){
        int x = y;
    }
}